logo and images finalised

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<link href="css/fonts.css" rel="stylesheet" type="text/css" media="all" />
 	<link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,600,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,700" rel="stylesheet">
-	<link rel="icon" href="img/logo/Oriya_preneur-removebg-preview.png">
+	<link rel="icon" href="img/logo/logoNoText.png">
 </head>
 
 <body>
@@ -52,9 +52,9 @@
 				<div class="container ">
 					<!--Row-->
 					<div class="row">
-						<div class="col-md-2">
-							<a class="scroll logo" href="#wrapper">
-								<img class="logo-default" src="img/logo/ODIAPRENEUR SVG LOGO.svg" height="120" width="35" alt="logo" />
+						<div class="col-md-2" style="margin-top: -5px">
+							<a class="scroll logo" href="/">
+								<img class="logo-default" src="img/logo/logoNoText.png" height="120" width="35" alt="logo" />
 							</a>
 						</div>
 						<div class="col-md-10 text-right">
@@ -88,7 +88,7 @@
 				<div class="container hero-content">
 					<!--Row-->
 					<div class="row">
-						<img class="logo-default" src="img/logo/logoWithText.svg" alt="logo" />
+						<img class="logo-default" src="img/logo/logoWithTitleText.svg" alt="logo" />
 						<h4 style="font-size: 20px;">MORE THAN AN IDEATHON</h4>
 						<!-- <p class="gradient-text"><strong>Student Registrations will open shortly</strong></p> -->
 						<a href="#" class="but scroll mt-30"> REGISTER FOR THE EVENT</a>
@@ -102,7 +102,7 @@
 		</section>
 		<!--End hero section-->
 		<!--About section-->
-		<section id="about" class="about pt-120 pb-120">
+		<section id="about" class="about pt-120">
 			<!--Container-->
 			<div class="container">
 				<!--Row-->
@@ -309,12 +309,25 @@
 								faculty members and some Govt. officials from the Higher Secondary
 								department.
 							</p>
+							<h4 class="gradient-text mt-30" style="font-size: 20px;">
+								<a href="#" target="_blank">
+									See the list of mentors for each district
+									<svg style="margin-bottom: -3px" class="icon icon-tabler icon-tabler-external-link" width="24" height="24" viewBox="0 0 24 24"
+										stroke-width="2" stroke="cyan" fill="none" stroke-linecap="round" stroke-linejoin="round"
+										xmlns="http://www.w3.org/2000/svg">
+										<defs></defs>
+										<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+										<path d="M11 7h-5a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-5"></path>
+										<line x1="10" y1="14" x2="20" y2="4"></line>
+										<polyline points="15 4 20 4 20 9"></polyline>
+									</svg>
+								</a>
+							</h4>
 							<h4 class="gradient-text mt-30" style="font-size: 20px;">STATE LEVEL MENTORS</h4>
 							<p class="title-lead mt-30">
 								The team will consist of industry experts from different companies
-								like <strong>DELL</strong> and <strong>IBM</strong> along with members
-								from Higher Edication department of Govt. and some IIIT mentors from
-								previous rounds.
+								like <strong>GOOGLE</strong>, <strong>DELL</strong> and <strong>IBM</strong> along with members
+								from Higher Education department of Govt. and some IIIT mentors.
 							</p>
 						</div>
 					</div>
@@ -346,13 +359,7 @@
 							<div class="block-img overlay soft">
 								<div class="background-img">
 									<img src="img/tink_logo_small.jpg" alt="">
-								</div>
-
-								<div class="block-info-2">
-									<p>
-										<strong>The TinkerHub Foundation</strong>
-										<span>Community</span>
-									</p>
+								</div>MORE THAN AN IDEATHON
 								</div>
 							</div>
 						</div>
@@ -361,7 +368,7 @@
 			</section>
 
 			<!--Speakers section-->
-			<section id="speakers" class="speakers pt-120">
+			<section id="speakers" class="speakers pt-100">
 				<!--Container-->
 				<div class="container">
 					<!--Row-->
@@ -541,7 +548,7 @@
 		<!--Counter section-->
 		<!--End counter section-->
 		<!--Tickest section-->
-		<section id="prizes" class="tickets pt-120 pb-120">
+		<section id="prizes" class="tickets pt-120">
 			<!--Container-->
 			<div class="container">
 				<!--Row-->
@@ -580,7 +587,9 @@
 						</div>
 					</div> -->
 					<div class="col-sm-12">
-						<h4 class="gradient-text mt-10" style="font-size: 20px; text-align: center;">DISTRICT LEVEL PRIZES</h4>
+						<h4 class="gradient-text mt-10" style="font-size: 20px; text-align: center;">
+							DISTRICT LEVEL PRIZES
+						</h4>
 						<div class="col-sm-4">
 							<ul class="block-tickets active">
 								<li>
@@ -679,13 +688,13 @@
 		</section>
 		<!--End register section-->
 		<!--Sponsor section-->
-		<section class="sponser pb-90 brd-bottom">
+		<section id="sponsors" class="sponser pb-90 brd-bottom">
 			<!--Container-->
 			<div class="container">
 				<!--Row-->
 				<div class="row">
 					<div class="col-sm-8 col-sm-offset-2 text-center ">
-						<h1 class="title">Organizers</h1>
+						<h1 class="title mb-100">Organizers</h1>
 						<!-- <p class="title-lead mt-10 mb-20">For further info about sponsoring feel free to get in touch with us</p> -->
 						<!-- <a href="https://drive.google.com/file/d/1rjGdaV5PZ-qHIU6eRRnYxtdsFkBltzaT/view?usp=sharing" class="but mt-30"> Learn more about the organizers</a> -->
 					</div>
@@ -693,7 +702,7 @@
 				<!--End row-->
 			</div>
 			<!--End container-->
-			<section id="faq" class="faq pt-120 pb-120">
+			<section id="faq" class="faq pb-100">
 				<!--Container-->
 				<div class="container">
 					<!--Row-->
@@ -746,22 +755,22 @@
 						ORGANIZING PARTNERS
 					</h4>
 					<div class="col-sm-12 text-center">
-						<div class="col-md-2 col-sm-2">
+						<div class="col-md-2 col-sm-2" style="display: flex; justify-content: center; align-items: center;">
 							<div class="block-club">
 								<img src="img/iiit-bh_logo.png" height="200" width="410" alt="iiit-bh">
 							</div>
 						</div>
-						<div class="col-md-2 col-sm-2">
+						<div class="col-md-2 col-sm-2" style="display: flex; justify-content: center; align-items: center;">
 							<div class="block-club-1 ">
 								<img src="img/govt_of_odisha.png" height="200" width="410" alt="Govt. Of Odisha">
 							</div>
 						</div>
-						<div class="col-md-2 col-sm-2 ">
+						<div class="col-md-2 col-sm-2 " style="display: flex; justify-content: center; align-items: center;">
 							<div class="block-club">
 								<img src="img/chse_logo.png" height="200" width="410" alt="CHSE">
 							</div>
 						</div>
-						<div class="col-md-2 col-sm-2">
+						<div class="col-md-2 col-sm-2" style="display: flex; justify-content: center; align-items: center;">
 							<div class="block-club">
 								<img src="img/osepa_logo.jpg" height="200" width="410" alt="OSEPA">
 							</div>
@@ -773,17 +782,17 @@
 						TITLE PARTNERS
 					</h4>
 					<div class="col-sm-12 text-center">
-						<div class="col-md-2 col-sm-2">
+						<div class="col-md-2 col-sm-2" style="display: flex; justify-content: center; align-items: center;">
 							<div class="block-club">
 								<img src="img/Google_2015_logo.svg" height="200" width="410" alt="Google">
 							</div>
 						</div>
-						<div class="col-md-2 col-sm-2">
+						<div class="col-md-2 col-sm-2" style="display: flex; justify-content: center; align-items: center;">
 							<div class="block-club">
 								<img src="img/Dell_logo_2016.svg.png" height="200" width="410" alt="DELL">
 							</div>
 						</div>
-						<div class="col-md-2 col-sm-2">
+						<div class="col-md-2 col-sm-2" style="display: flex; justify-content: center; align-items: center;">
 							<div class="block-club">
 								<img src="img/IBM_logo.svg.png" height="200" width="410" alt="IBM">
 							</div>
