e-cell logo added

--- a/index.html
+++ b/index.html
@@ -943,7 +943,7 @@
 						<div class="col-md-2 col-sm-2">
 							<div class="block-club">
 								<div class="title-lead">Entrepreneurship Cell</div>
-								<img src="img/e-cell.png" height="200" width="410" alt="E-Cell">
+								<img src="img/E-Cell-Logo-white-bg-Removed.png" height="200" width="410" alt="E-Cell">
 							</div>
 						</div>
 						<!-- <div class="col-md-2 col-sm-2">
