--- a/index.html
+++ b/index.html
@@ -128,7 +128,9 @@
 						</p>
 						<p class="title-lead mt-30">Find all details abut the event here: <br>
 							<h2 class="gradient-text mt-10">
-								<a class="title-lead" href="https://docs.google.com/document/d/1BIFfQq3fqwnxRRo_LEjixuAe35_Jm-ts/edit?usp=sharing&ouid=109970193768028404619&rtpof=true&sd=true" target="_blank" style="font-size: 17px;">
+								<a class="title-lead"
+									href="https://drive.google.com/file/d/19yKytoubBrt0RdlXBbJeJH-Pt-B4oAnY/view?usp=sharing"
+									target="_blank" style="font-size: 20px;">
 									Event Booklet
 								</a>
 							</h2>
@@ -268,8 +270,8 @@
 							<p>
 								<strong>Problem Statements</strong><br>
 								<span style="font-size: 17px;">
-									<a href="https://drive.google.com/file/d/1-AGFp_Fg6QqyCfJ0EVTZEMg4nHVaTXN4/view?usp=sharing" target="_blank" class="gradient-text">
-										15 problem statements
+									<a href="https://drive.google.com/file/d/1MjIptTLUui3aDATQgxCS22UWgKrzFYix/view?usp=sharing" target="_blank" class="gradient-text">
+										Click here 
 									</a>
 								</span>
 							</p>
@@ -555,7 +557,7 @@
 				<div class="row">
 					<div class="col-sm-8 col-sm-offset-2 mb-130 text-center">
 						<h1 class="title">Event Prizes</h1>
-						<p class="title-lead mt-10">We have a Total Prize Pool of 1,20,000 Rupees!<br> Come join the world’s influencers and get answers. </p>
+						<p class="title-lead mt-10">We have a total prize pool of 10 lakh rupees!<br> Come join the world’s influencers and get answers. </p>
 					</div>
 				</div>
 				<!--End row-->
@@ -587,7 +589,7 @@
 						</div>
 					</div> -->
 					<div class="col-sm-12">
-						<h4 class="gradient-text mt-10" style="font-size: 20px; text-align: center;">
+						<h4 class="gradient-text mt-10" style="font-size: 23px; text-align: center;">
 							DISTRICT LEVEL PRIZES
 						</h4>
 						<div class="col-sm-4">
@@ -648,7 +650,9 @@
 					</div>
 				</div>
 				<div class="col-sm-12 ">
-					<h4 class="gradient-text mt-10" style="font-size: 20px; text-align: center;">STATE LEVEL PRIZES</h4>
+					<h4 class="gradient-text mt-10" style="font-size: 23px; text-align: center;">
+						STATE LEVEL PRIZES
+					</h4>
 					<div class="col-sm-4">
 						<ul class="block-tickets active">
 							<li>
@@ -977,7 +981,7 @@
 							<ul class="block-legal">
 								<li>
 									<span>
-										<a class="gradient-text scroll" style="font-size: 17px;" href="https://docs.google.com/document/d/1BIFfQq3fqwnxRRo_LEjixuAe35_Jm-ts/edit?usp=sharing&ouid=109970193768028404619&rtpof=true&sd=true" target="_blank">
+										<a class="gradient-text scroll" style="font-size: 17px;" href="https://drive.google.com/file/d/19yKytoubBrt0RdlXBbJeJH-Pt-B4oAnY/view?usp=sharing" target="_blank">
 											Event Booklet
 										</a>
 									</span>
