--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 							The participants will compete among all students from all over the 30
 							districts of odisha. So buckle up and get ready to rack your brains! 
 						</p>
-						<p class="title-lead mt-30">Find all details abut the event here: <br>
+						<p class="title-lead mt-30">Find all details about the event here: <br>
 							<h2 class="gradient-text mt-10">
 								<a class="title-lead" href="https://docs.google.com/document/d/1BIFfQq3fqwnxRRo_LEjixuAe35_Jm-ts/edit?usp=sharing&ouid=109970193768028404619&rtpof=true&sd=true" target="_blank" style="font-size: 17px;">
 									Event Booklet
@@ -721,15 +721,19 @@
 					<div class="row">
 						<div class="col-sm-8 col-sm-offset-2 ">
 							<div class="block-faq" style="text-align: center;">
-								<p class="title-lead mb-30">International Institute of Information Technology (IIIT) Bhubaneswar is a technical 
-									institute located in the city of Bhubaneswar, Odisha. It was established in the year 2006 as a 
-									joint venture between the Government of India, the Government of Odisha, and the industry partner, 
-									Tata Consultancy Services (TCS). The institute offers undergraduate, postgraduate, and PhD programs 
-									in various fields of engineering and computer science. It has a strong emphasis on research and 
-									innovation, and has well-equipped laboratories and state-of-the-art facilities for its students. 
-									IIIT Bhubaneswar has a great coding and developer environment with its various clubs like Google Developer 
-									Student's Club, Programming Society, The Automation and Robotics Society along with various other technical 
-									and non-technical clubs that is run by and for the students.</p>
+								<p class="title-lead mb-30">IIIT Bhubaneswar owes its origins to the initiative of Government Odisha. 
+									It is a result of the desire of the Government to establish a world class institute of Information 
+									Technology in the state. The Institute was registered as a society in Nov 2006. In January 2014, the 
+									International Institute of Information Technology, Bhubaneswar was converted to a Unitary University.
+									The Institute has its focus on quality and rigorous education, quality resource, academic infrastructure, technology 
+									and innovation. These focus has helped IIIT, Bhubaneswar make a name for itself in a short period of time.
+									The mission of IIIT is to be a knowledge seeking Institution of higher learning that will educate students in 
+									technology and other disciplines of scholarship. The Institute strives to work closely with the Industry and other 
+									users of the technology to develop and deliver technological solutions to enhance their competitive position.
+
+									The Institute is dedicated to create a vibrant community of students, faculty and scholars with passion for learning, 
+									creativity & innovation. The Institute provides a healthy and stimulating work environment for its employees.
+									</p>
 								<!-- <h4 class="mb-10">A WORD ON DIVERSITY</h4>-->
 								<p class="title-lead mt-30">
 									This event is organized in conjunction with the <strong>Higher Education Department
