Added modals and dorpdown for district mentors

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 	<link href="css/base.css" rel="stylesheet" type="text/css" media="all" />
 	<link href="css/main.css" rel="stylesheet" type="text/css" media="all" />
+	<link href="css/modal.css" rel="stylesheet" type="text/css" media="all" />
 	<link href="css/flexslider.css" rel="stylesheet" type="text/css" media="all" />
 	<link href="css/venobox.css" rel="stylesheet" type="text/css" media="all" />
 	<link href="css/fonts.css" rel="stylesheet" type="text/css" media="all" />
@@ -325,6 +326,32 @@
 									</svg>
 								</a>
 							</h4>
+                            <br/>
+							<ul class="block-tab">
+								<!--Tab-->
+								<li class="active ">
+									<div class="block-date"><i></i><strong>District Wise Mentor list</strong> <span style="padding-left: 20px;"></span></div>
+									
+									<div class="block-detail">
+										<span class="time">List of districts</span> 
+										<!-- <span class="topic">STATE FINALS</span> -->
+										<div class="block-text">
+											<a href="#angul">
+												<div class="readMore">
+													1. Angul
+												</div>
+											</a>
+											<a href="#second">
+												<div class="readMore">
+													2. second
+												</div>
+											</a>
+										</div>
+									</div>
+								</li>
+							</ul>
+
+
 							<h4 class="gradient-text mt-30" style="font-size: 20px;">STATE LEVEL MENTORS</h4>
 							<p class="title-lead mt-30">
 								The team will consist of industry experts from different companies
@@ -951,7 +978,7 @@
 						<div class="col-md-2 col-sm-2">
 							<div class="block-club">
 								<div class="title-lead">Entrepreneurship Cell</div>
-								<img src="img/E-Cell-Logo-white-bg-Removed.png" height="200" width="410" alt="E-Cell">
+								<img src="img/ecell.png" height="100" width="140" alt="E-Cell">
 							</div>
 						</div>
 						<!-- <div class="col-md-2 col-sm-2">
@@ -1011,6 +1038,41 @@
 			</div>
 		</footer>
 		</div>
+
+
+        <div id="angul" class="modal-window">
+            <div>
+                <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
+                <div class="problem">
+                    <div>Angul</div>
+					<pre>
+						Faculty Mentor - 
+
+						Phd mentor - 
+						Betch mentors - 
+					</pre>
+                </div>
+            </div>
+        </div>
+        <div id="second" class="modal-window">
+            <div>
+                <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
+                <div class="problem">
+                    <div>Second</div>
+					<pre>
+						Faculty Mentor - 
+
+						Phd mentor - 
+						Betch mentors - 
+					</pre>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
 		<!-- End wrapper-->
 		<!--Javascript-->
 		<script src="js/jquery-1.12.4.min.js" type="text/javascript"></script>
