District list updtaed

--- a/index.html
+++ b/index.html
@@ -331,21 +331,61 @@
 								<!--Tab-->
 								<li class="active ">
 									<div class="block-date"><i></i><strong>District Wise Mentor list</strong> <span style="padding-left: 20px;"></span></div>
-									
-									<div class="block-detail">
+                                    <div class="block-detail">
 										<span class="time">List of districts</span> 
+										<span class="time">(Hover and click over desired dist.)</span> 
+									</div>
+									<div class="block-detail2">
 										<!-- <span class="topic">STATE FINALS</span> -->
-										<div class="block-text">
-											<a href="#angul">
-												<div class="readMore">
-													1. Angul
-												</div>
-											</a>
-											<a href="#second">
-												<div class="readMore">
-													2. second
-												</div>
-											</a>
+										<div class="block-text" class="col-sm-12">
+											<a href="#angul" class="col-sm-4"><div class="readMore">1. Angul</div></a>
+											<a href="#boudh" class="col-sm-4"><div class="readMore">2. Boudh</div></a>
+											<a href="#balangir" class="col-sm-4"><div class="readMore">3. Balangir</div></a>
+										</div>
+										<div class="block-text" class="col-sm-12">
+											<a href='#Baragarh' class="col-sm-4"><div class="readMore">4. Baragarh</div></a>
+											<a href="#Baleshwar" class="col-sm-4"><div class="readMore">5. Baleshwar</div></a>
+											<a href="#Bhadrak" class="col-sm-4"><div class="readMore">6. Bhadrak</div></a>
+										</div>
+										<div class="block-text" class="col-sm-12">
+											<a href="#Cuttack"  class="col-sm-4"><div class="readMore">7. Cuttack</div></a>
+											<a href="#Debagarh" class="col-sm-4"><div class="readMore">8. Debagarh</div></a>
+											<a href="#Dhenkanal" class="col-sm-4"><div class="readMore">9. Dhenkanal</div></a>
+										</div>	
+										<div class="block-text" class="col-sm-12">
+											<a href="#Ganjam" class="col-sm-4"><div class="readMore">10. Ganjam</div></a>
+											<a href="#Gajapati" class="col-sm-4"><div class="readMore">11. Gajapati</div></a>
+											<a href="#Jharsuguada" class="col-sm-4"><div class="readMore">12. Jharsuguada</div></a>
+										</div>	
+										<div class="block-text" class="col-sm-12">
+											<a href="#Jajpur" class="col-sm-4"><div class="readMore">13. Jajpur</div></a>
+											<a href="#Jagatsinghapur" class="col-sm-4"><div class="readMore">14. Jagatsinghapur</div></a>
+											<a href="#Khorda" class="col-sm-4"><div class="readMore">15. Khorda</div></a>
+										</div>
+										<div class="block-text" class="col-sm-12">
+											<a href="#Kendujhar" class="col-sm-4"><div class="readMore">16. Kendujhar</div></a>
+											<a href="#Kalahandi" class="col-sm-4"><div class="readMore">17. Kalahandi</div></a>
+											<a href="#Kandhmal" class="col-sm-4"><div class="readMore">18. Kandhmal</div></a>
+										</div>
+										<div class="block-text" class="col-sm-12">
+											<a href="#Koraput" class="col-sm-4"><div class="readMore">19. Koraput</div></a>
+											<a href="#Kendrapada" class="col-sm-4"><div class="readMore">20. Kendrapada</div></a>
+											<a href="#Malkanigiri" class="col-sm-4"><div class="readMore">21. Malkanigiri</div></a>
+										</div>
+										<div class="block-text" class="col-sm-12">
+											<a href="#Mayurbhanj" class="col-sm-4"><div class="readMore">22. Mayurbhanj</div></a>
+											<a href="#Nabarangapur" class="col-sm-4"><div class="readMore">23. Nabarangapur</div></a>
+											<a href="#Nuapada" class="col-sm-4"><div class="readMore">24. Nuapada</div></a>
+											
+										<div class="block-text" class="col-sm-12">
+											<a href="#Nayagarh" class="col-sm-4"><div class="readMore">25. Nayagarh</div></a>
+											<a href="#Puri" class="col-sm-4"><div class="readMore">26. Puri</div></a>
+											<a href="#Raygada" class="col-sm-4"><div class="readMore">27. Raygada</div></a>
+									    </div>
+										<div class="block-text" class="col-sm-12">
+											<a href="#Sambalpur" class="col-sm-4"><div class="readMore">28. Sambalpur</div></a>
+											<a href="#Subarnapur" class="col-sm-4"><div class="readMore">29. Subarnapur</div></a>
+											<a href="#Sundergarh" class="col-sm-4"><div class="readMore">30. Sundergarh</div></a>
 										</div>
 									</div>
 								</li>
