--- a/index.html
+++ b/index.html
@@ -1040,21 +1040,147 @@
 		</div>
 
 
-        <div id="angul" class="modal-window">
+        <div id="Angul" class="modal-window">
             <div>
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
                     <div>Angul</div>
 					<pre>
-						Faculty Mentor - 
+						Faculty Mentor - Prof. Ajay Ku. Dash
 
-						Phd mentor - 
-						Betch mentors - 
+						Phd mentor - Madhushree Kuanr
+						Betch mentors - Swastik Singh, Raj Alpha Swain, Ayuska Choudhary
 					</pre>
                 </div>
             </div>
         </div>
-        <div id="second" class="modal-window">
+		<div id="Boudh" class="modal-window">
+            <div>
+                <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
+                <div class="problem">
+                    <div>Boudh</div>
+					<pre>
+						Faculty Mentor - Prof. Usharani Rout
+
+						Phd mentor - Sunil Samanta Singhar
+						Betch mentors - Raj Aryan, Abhay Rajpoot, Lila Lopamudra Das
+					</pre>
+                </div>
+            </div>
+        </div>
+		<div id="Balangir" class="modal-window">
+            <div>
+                <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
+                <div class="problem">
+                    <div>Balangir</div>
+					<pre>
+						Faculty Mentor - Prof. Rakesh Ku. Lenka
+
+						Phd mentor - Saummit Kanoongo
+						Betch mentors - Naman Goyal, Santanu Mohapatra, Swaroopdarshan Dash
+					</pre>
+                </div>
+            </div>
+        </div>
+		<div id="Baragarh" class="modal-window">
+            <div>
+                <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
+                <div class="problem">
+                    <div>Baragarh</div>
+					<pre>
+						Faculty Mentor - Prof. Biswa Ranjan Pattnaik
+
+						Phd mentor - Sidharth Samantray
+						Betch mentors - Satyaprakash Sahoo, Dibyakant Lenka, Kaushika Dash
+					</pre>
+                </div>
+            </div>
+        </div>
+		<div id="Baleswar" class="modal-window">
+            <div>
+                <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
+                <div class="problem">
+                    <div>Baleswar</div>
+					<pre>
+						Faculty Mentor - Prof. Muktikanta Sahoo
+
+						Phd mentor - Subham Kumar Padhy
+						Betch mentors - Shripati Pandey, Bishmay Kumar Padhi, Aryaman Patra
+					</pre>
+                </div>
+            </div>
+        </div>
+		<div id="Bhadrak" class="modal-window">
+            <div>
+                <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
+                <div class="problem">
+                    <div>Bhadrak</div>
+					<pre>
+						Faculty Mentor - Prof.Soubhagya Ranjan Mahalik
+
+						Phd mentor - Subhranshu Sekhar Pati
+						Betch mentors - Saswat Samal, Rohan Kumar Mohanty, LIRON SARANGI
+					</pre>
+                </div>
+            </div>
+        </div>
+		<div id="Cuttack" class="modal-window">
+            <div>
+                <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
+                <div class="problem">
+                    <div>Cuttack</div>
+					<pre>
+						Faculty Mentor - Prof. Anjali Mohapatra
+
+						Phd mentor - Trilochan Rout
+						Betch mentors - Muskan Sahoo, Shubank Nagar, Chirantan Beura
+					</pre>
+                </div>
+            </div>
+        </div>
+		<div id="Debagarh" class="modal-window">
+            <div>
+                <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
+                <div class="problem">
+                    <div>Debagarh</div>
+					<pre>
+						Faculty Mentor - Prof. Surya Narayan Mohapatra
+
+						Phd mentor - Priya Mishra
+						Betch mentors - CV Anish, Soumesh Mohanty, Brijendra Singh
+					</pre>
+                </div>
+            </div>
+        </div>
+		<div id="Dhenkanal" class="modal-window">
+            <div>
+                <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
+                <div class="problem">
+                    <div>Dhenkanal</div>
+					<pre>
+						Faculty Mentor - 
+
+						Phd mentor - Sagarika Patro
+						Betch mentors - Harshit Singh, Sneha Mandal, Priyadarseeny Pasayat
+					</pre>
+                </div>
+            </div>
+        </div>
+        <div id="Ganjam" class="modal-window">
+            <div>
+                <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
+                <div class="problem">
+                    <div>Ganjam</div>
+					<pre>
+						Faculty Mentor - Prof. Hemanata Pati
+
+						Phd mentor - Vikash Ranjan
+						Betch mentors - Vishal Manam, P Navya Preetam Reddy, Yash Bhardwaj
+					</pre>
+                </div>
+            </div>
+        </div>
+		<div id="second" class="modal-window">
             <div>
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
