district list update from 11-20

--- a/index.html
+++ b/index.html
@@ -1084,13 +1084,13 @@
             <div>
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
-                    <div>Angul</div>
-					<pre>
-						Faculty Mentor - Prof. Ajay Ku. Dash
+                    <div>Angul</div><br>
+					<p>
+						Faculty Mentor - Prof. Ajay Ku. Dash<br>
 
-						Phd mentor - Madhushree Kuanr
+						Phd mentor - Madhushree Kuanr<br>
 						Betch mentors - Swastik Singh, Raj Alpha Swain, Ayuska Choudhary
-					</pre>
+					</p>
                 </div>
             </div>
         </div>
@@ -1098,13 +1098,13 @@
             <div>
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
-                    <div>Boudh</div>
-					<pre>
-						Faculty Mentor - Prof. Usharani Rout
+                    <div>Boudh</div><br>
+					<p>
+						Faculty Mentor - Prof. Usharani Rout<br>
 
-						Phd mentor - Sunil Samanta Singhar
+						Phd mentor - Sunil Samanta Singhar<br>
 						Betch mentors - Raj Aryan, Abhay Rajpoot, Lila Lopamudra Das
-					</pre>
+					</p>
                 </div>
             </div>
         </div>
@@ -1112,13 +1112,13 @@
             <div>
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
-                    <div>Balangir</div>
-					<pre>
-						Faculty Mentor - Prof. Rakesh Ku. Lenka
+                    <div>Balangir</div><br>
+					<p>
+						Faculty Mentor - Prof. Rakesh Ku. Lenka<br>
 
-						Phd mentor - Saummit Kanoongo
+						Phd mentor - Saummit Kanoongo<br>
 						Betch mentors - Naman Goyal, Santanu Mohapatra, Swaroopdarshan Dash
-					</pre>
+					</p>
                 </div>
             </div>
         </div>
@@ -1126,13 +1126,13 @@
             <div>
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
-                    <div>Baragarh</div>
-					<pre>
-						Faculty Mentor - Prof. Biswa Ranjan Pattnaik
+                    <div>Baragarh</div><br>
+					<p>
+						Faculty Mentor - Prof. Biswa Ranjan Pattnaik<br>
 
-						Phd mentor - Sidharth Samantray
+						Phd mentor - Sidharth Samantray<br>
 						Betch mentors - Satyaprakash Sahoo, Dibyakant Lenka, Kaushika Dash
-					</pre>
+					</p>
                 </div>
             </div>
         </div>
@@ -1141,12 +1141,12 @@
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
                     <div>Baleswar</div>
-					<pre>
-						Faculty Mentor - Prof. Muktikanta Sahoo
+					<p>
+						Faculty Mentor - Prof. Muktikanta Sahoo<br>
 
-						Phd mentor - Subham Kumar Padhy
+						Phd mentor - Subham Kumar Padhy<br>
 						Betch mentors - Shripati Pandey, Bishmay Kumar Padhi, Aryaman Patra
-					</pre>
+					</p>
                 </div>
             </div>
         </div>
@@ -1154,13 +1154,13 @@
             <div>
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
-                    <div>Bhadrak</div>
-					<pre>
-						Faculty Mentor - Prof.Soubhagya Ranjan Mahalik
+                    <div>Bhadrak</div><br>
+					<p>
+						Faculty Mentor - Prof.Soubhagya Ranjan Mahalik<br>
 
-						Phd mentor - Subhranshu Sekhar Pati
+						Phd mentor - Subhranshu Sekhar Pati<br>
 						Betch mentors - Saswat Samal, Rohan Kumar Mohanty, LIRON SARANGI
-					</pre>
+					</p>
                 </div>
             </div>
         </div>
@@ -1168,13 +1168,13 @@
             <div>
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
-                    <div>Cuttack</div>
-					<pre>
-						Faculty Mentor - Prof. Anjali Mohapatra
+                    <div>Cuttack</div><br>
+					<p>
+						Faculty Mentor - Prof. Anjali Mohapatra<br>
 
-						Phd mentor - Trilochan Rout
+						Phd mentor - Trilochan Rout<br>
 						Betch mentors - Muskan Sahoo, Shubank Nagar, Chirantan Beura
-					</pre>
+					</p>
                 </div>
             </div>
         </div>
@@ -1182,13 +1182,13 @@
             <div>
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
-                    <div>Debagarh</div>
-					<pre>
-						Faculty Mentor - Prof. Surya Narayan Mohapatra
+                    <div>Debagarh</div><br>
+					<p>
+						Faculty Mentor - Prof. Surya Narayan Mohapatra<br>
 
-						Phd mentor - Priya Mishra
+						Phd mentor - Priya Mishra<br>
 						Betch mentors - CV Anish, Soumesh Mohanty, Brijendra Singh
-					</pre>
+					</p>
                 </div>
             </div>
         </div>
@@ -1196,13 +1196,13 @@
             <div>
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
-                    <div>Dhenkanal</div>
-					<pre>
-						Faculty Mentor - 
+                    <div>Dhenkanal</div><br>
+					<p>
+						Faculty Mentor - <br>
 
-						Phd mentor - Sagarika Patro
+						Phd mentor - Sagarika Patro<br>
 						Betch mentors - Harshit Singh, Sneha Mandal, Priyadarseeny Pasayat
-					</pre>
+					</p>
                 </div>
             </div>
         </div>
@@ -1210,13 +1210,153 @@
             <div>
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
-                    <div>Ganjam</div>
-					<pre>
-						Faculty Mentor - Prof. Hemanata Pati
+                    <div>Ganjam</div><br>
+					<p>
+						Faculty Mentor - Prof. Deepak Ku. Pati<br>
 
-						Phd mentor - Vikash Ranjan
+						Phd mentor - Sudhanshu Ranjan Dwibedi<br>
+						Betch mentors - Bonthu Purnanand, Upendra, Zephania Raika
+					</p>
+                </div>
+            </div>
+        </div>
+        <div id="Gajapati" class="modal-window">
+            <div>
+                <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
+                <div class="problem">
+                    <div>Gajapati</div><br>
+					<p>
+						Faculty Mentor - Prof. Hemanata Pati<br>
+
+						Phd mentor - Vikash Ranjan<br>
 						Betch mentors - Vishal Manam, P Navya Preetam Reddy, Yash Bhardwaj
-					</pre>
+					</p>
+                </div>
+            </div>
+        </div>
+        <div id="Jharsuguada" class="modal-window">
+            <div>
+                <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
+                <div class="problem">
+                    <div>Jharsuguda</div><br>
+					<p>
+						Faculty Mentor - Prof. Saroj Mishra<br>
+
+						Phd mentor - Shantilata Palei<br>
+						Betch mentors - B. Prithiraj, Prajna Jeet Ojha, Rupsa Pramanik
+					</p>
+                </div>
+            </div>
+        </div>
+        <div id="Jajpur" class="modal-window">
+            <div>
+                <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
+                <div class="problem">
+                    <div>Jajpur</div><br>
+					<p>
+						Faculty Mentor - Prof. Sabyasachi Patra<br>
+
+						Phd mentor - Ipsita Behera<br>
+						Betch mentors - Pranav Patel, Prince Pious Omm Prakash, Biswa Prakash Dalai
+					</p>
+                </div>
+            </div>
+        </div>
+        <div id="Jagatsinghapur" class="modal-window">
+            <div>
+                <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
+                <div class="problem">
+                    <div>Jagatsinghpur</div><br>
+					<p>
+						Faculty Mentor - Prof. Umamani Subudhi<br>
+
+						Phd mentor - Anita Sahoo<br>
+						Betch mentors - Simron Bhuyan, Aditya Panda, Pradosh Preetam
+					</p>
+                </div>
+            </div>
+        </div>
+        <div id="Khorda" class="modal-window">
+            <div>
+                <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
+                <div class="problem">
+                    <div>Khorda</div><br>
+					<p>
+						Faculty Mentor - Prof. Pradyut Biswal<br>Prof. Gayatri Pattnaik
+
+						Phd mentor - Aninta Sahoo<br>
+						Betch mentors - Simran Pattnaik, Garvisha Bansal, Rishit Parija
+					</p>
+                </div>
+            </div>
+        </div>
+        <div id="Kendujhar" class="modal-window">
+            <div>
+                <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
+                <div class="problem">
+                    <div>Kendujhar</div><br>
+					<p>
+						Faculty Mentor - Prof. Rajat Ku. Giri<br>
+
+						Phd mentor - Subhra Mohanty<br>
+						Betch mentors - Pratham Biswal, Roshan Dash, Rajesh Kumar Jena
+					</p>
+                </div>
+            </div>
+        </div>
+        <div id="Kalahandi" class="modal-window">
+            <div>
+                <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
+                <div class="problem">
+                    <div>Kalahandi</div><br>
+					<p>
+						Faculty Mentor - Prof. Bharati Mishra<br>
+
+						Phd mentor - Nibedita Sahoo<br>
+						Betch mentors - Ajay Satra Sri Sai Jakkampudi, Lavesh Saluja, Lucky Jaiswal
+					</p>
+                </div>
+            </div>
+        </div>
+        <div id="Kandhmal" class="modal-window">
+            <div>
+                <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
+                <div class="problem">
+                    <div>Kandhmal</div><br>
+					<p>
+						Faculty Mentor - Prof. Khirodh Ku. Rout<br>
+
+						Phd mentor - Sasmita Kumari Nayak<br>
+						Betch mentors - Aryan Sinha, Anish Mannem, Swata Swayam Dash
+					</p>
+                </div>
+            </div>
+        </div>
+        <div id="Koraput" class="modal-window">
+            <div>
+                <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
+                <div class="problem">
+                    <div>Koraput</div><br>
+					<p>
+						Faculty Mentor - Prof. Debani Prashad Dash<br>
+
+						Phd mentor - Deepika Moharana<br>
+						Betch mentors - Shubhasai Mohapatra, Soumya Ranjan Hembram, Achutananda Sahu
+					</p>
+                </div>
+            </div>
+        </div>
+        <div id="Kendrapada" class="modal-window">
+            <div>
+                <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
+                <div class="problem">
+                    <div>Kendrapada</div><br>
+					<p>
+						Faculty Mentor - Prof. Tushar Ranjan Sahoo<br>
+
+						Phd mentor - Rajshree Priyadarshini<br>
+						Betch mentors - Ankush Nigam, Rohit Kumar Swain, Anshuman Mahabhoi
+					</p>
                 </div>
             </div>
         </div>
@@ -1224,13 +1364,13 @@
             <div>
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
-                    <div>Second</div>
-					<pre>
-						Faculty Mentor - 
+                    <div>Second</div><br>
+					<p>
+						Faculty Mentor - <br>
 
-						Phd mentor - 
+						Phd mentor - <br>
 						Betch mentors - 
-					</pre>
+					</p>
                 </div>
             </div>
         </div>
