mentor list redesign

--- a/index.html
+++ b/index.html
@@ -312,29 +312,14 @@
 								faculty members and some Govt. officials from the Higher Secondary
 								department.
 							</p>
-							<h4 class="gradient-text mt-30" style="font-size: 20px;">
-								<a href="#" target="_blank">
-									See the list of mentors for each district
-									<svg style="margin-bottom: -3px" class="icon icon-tabler icon-tabler-external-link" width="24" height="24" viewBox="0 0 24 24"
-										stroke-width="2" stroke="cyan" fill="none" stroke-linecap="round" stroke-linejoin="round"
-										xmlns="http://www.w3.org/2000/svg">
-										<defs></defs>
-										<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-										<path d="M11 7h-5a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-5"></path>
-										<line x1="10" y1="14" x2="20" y2="4"></line>
-										<polyline points="15 4 20 4 20 9"></polyline>
-									</svg>
-								</a>
-							</h4>
-                            <br/>
 							<ul class="block-tab">
 								<!--Tab-->
 								<li class="active ">
-									<div class="block-date"><i></i><strong>District Wise Mentor list</strong> <span style="padding-left: 20px;"></span></div>
+									<div class="block-date"><i></i><strong class ="gradient-text" style="text-align:center">See the list of mentors</strong> <span style="padding-left: 20px;"></span></div>
                                     <div class="block-detail">
 										<span class="time">List of districts</span> 
 										<span class="time">(Hover and click over desired dist.)</span> 
-									</div>
+									
 									<div class="block-detail2">
 										<!-- <span class="topic">STATE FINALS</span> -->
 										<div class="block-text" class="col-sm-12">
@@ -387,6 +372,7 @@
 											<a href="#Subarnapur" class="col-sm-4"><div class="readMore">29. Subarnapur</div></a>
 											<a href="#Sundergarh" class="col-sm-4"><div class="readMore">30. Sundergarh</div></a>
 										</div>
+									</div>
 									</div>
 								</li>
 							</ul>
