--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 							</svg>
 							<p>
 								<strong>DATE</strong><br>
-								<span  style="font-size: 17px;">January 27th - 28th</span>
+								<span  style="font-size: 17px;">January 2023</span>
 							</p>
 						</div>
 					</div>
@@ -565,11 +565,11 @@
 									<p>- 30 Deans/Principals from each district</p>
 									<p>- 30 District Education officers / representatives from each district</p>
 									<p>- Student teams from each district along with faculty representative</p>
-									<p>11:00 AM - ORIENTATION</p>
-									<p>11:30 AM - RELEASE OF PROBLEM STATEMENTS</p>
-									<p>12:30 PM - TIMELINE OF THE EVENT </p>
-									<p>12:45 AM - SHARING OF BOOKLET</p>
-									<p>1:00 PM - FAQ</p>
+									<p>- ORIENTATION</p>
+									<p>- RELEASE OF PROBLEM STATEMENTS</p>
+									<p>- TIMELINE OF THE EVENT </p>
+									<p>- SHARING OF BOOKLET</p>
+									<p>- FAQ</p>
 								</div>
 							</div>
 							<div class="block-detail">
