--- a/index.html
+++ b/index.html
@@ -1094,7 +1094,8 @@
 						<li>Swastik Singh (Email: <a href="mailto:b520061@iiit-bh.ac.in" target="_blank">b520061@iiit-bh.ac.in</a>)</li>
 						<li>Raj Alpha Swain (Email: <a href="mailto:b321028@iiit-bh.ac.in" target="_blank">b321028@iiit-bh.ac.in</a>)</li>
 						<li>Ayuska Choudhary (Email: <a href="mailto:b222015@iiit-bh.ac.in" target="_blank">b222015@iiit-bh.ac.in</a>)</li>
-					</ul>
+					</ul><br>
+					<div><a href="#">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1103,12 +1104,12 @@
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
                     <div>Boudh</div><br>
-					<p>
+					<ul>
 						Prof. Usharani Rout<br>
 
 						Sunil Samanta Singhar<br>
 						Raj Aryan, Abhay Rajpoot, Lila Lopamudra Das
-					</p>
+					</ul>
                 </div>
             </div>
         </div>
@@ -1117,12 +1118,12 @@
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
                     <div>Balangir</div><br>
-					<p>
+					<ul>
 						Prof. Rakesh Ku. Lenka<br>
 
 						Saummit Kanoongo<br>
 						Naman Goyal, Santanu Mohapatra, Swaroopdarshan Dash
-					</p>
+					</ul>
                 </div>
             </div>
         </div>
@@ -1145,12 +1146,12 @@
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
                     <div>Baleshwar</div><br>
-					<p>
+					<ul>
 						Prof. Muktikanta Sahoo<br>
 
 						Subham Kumar Padhy<br>
 						Shripati Pandey, Bishmay Kumar Padhi, Aryaman Patra
-					</p>
+					</ul>
                 </div>
             </div>
         </div>
@@ -1215,12 +1216,12 @@
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
                     <div>Ganjam</div><br>
-					<p>
+					<ul>
 						Prof. Deepak Ku. Pati<br>
 
 						Sudhanshu Ranjan Dwibedi<br>
 						Bonthu Purnanand, Upendra, Zephania Raika
-					</p>
+					</ul>
                 </div>
             </div>
         </div>
@@ -1299,12 +1300,12 @@
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
                     <div>Kendujhar</div><br>
-					<p>
+					<ul>
 						Prof. Rajat Ku. Giri<br>
 
 						Subhra Mohanty<br>
 						Pratham Biswal, Roshan Dash, Rajesh Kumar Jena
-					</p>
+					</ul>
                 </div>
             </div>
         </div>
@@ -1341,12 +1342,12 @@
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
                     <div>Koraput</div><br>
-					<p>
+					<ul>
 						Prof. Debani Prashad Dash<br>
 
 						Deepika Moharana<br>
 						Shubhasai Mohapatra, Soumya Ranjan Hembram, Achutananda Sahu
-					</p>
+					</ul>
                 </div>
             </div>
         </div>
@@ -1355,12 +1356,12 @@
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
                     <div>Kendrapada</div><br>
-					<p>
+					<ul>
 						Prof. Tushar Ranjan Sahoo<br>
 
 						Rajshree Priyadarshini<br>
 						Ankush Nigam, Rohit Kumar Swain, Anshuman Mahabhoi
-					</p>
+					</ul>
                 </div>
             </div>
         </div>
@@ -1370,13 +1371,13 @@
                 <div class="problem">
                     <div>Malkanigiri</div>
 					<br>
-					<p>
+					<ul>
 						Prof. Surya Prakash Singh
                         <br>
 						Asit Kumar Mishra
 						<br>
 						Sandip Ranjan Behera, Pratik Ranjan Sahu, Ayush Anmol
-					</p>
+					</ul>
                 </div>
             </div>
         </div>
@@ -1386,7 +1387,7 @@
                 <div class="problem">
                     <div>Mayurbhanj</div>
 					<br>
-					<p>
+					<ul>
 						Prof. Venkata
 						Sridhar T.
                         <br>
@@ -1394,7 +1395,7 @@
 						Kitu Biswal						
 						<br>
 						Ravi Shankar, Priyanshu Yadav, Mansi Swaraj
-					</p>
+					</ul>
                 </div>
             </div>
         </div>
@@ -1404,7 +1405,7 @@
                 <div class="problem">
                     <div>Nabarangapur</div>
 					<br>
-					<p>
+					<ul>
 						Prof. Sanjeev
 						Mishra
                         <br>
@@ -1415,7 +1416,7 @@
 						Rudransh
 						Panighrahi, Yash Aman
 						Shrivastava, Swastik Gupta
-					</p>
+					</ul>
                 </div>
             </div>
         </div>
@@ -1425,7 +1426,7 @@
                 <div class="problem">
                     <div>Nuapada</div>
 					<br>
-					<p>
+					<ul>
 						Prof. Arun Ku.
 						Sahoo						
                         <br>
@@ -1435,7 +1436,7 @@
 						<br>
 						Yash Gupta, Ayush Kumar, Chinmaya
 						Kumar Sahoo
-					</p>
+					</ul>
                 </div>
             </div>
         </div>
@@ -1445,7 +1446,7 @@
                 <div class="problem">
                     <div>Nayagarh</div>
 					<br>
-					<p>
+					<ul>
 						Prof. Jayanta
 						Ku. Sahoo						
                         <br>
@@ -1455,7 +1456,7 @@
 						Piyush Mishra, Pranav Swaroop
 						Nayak, Om Prakash
 						Mishra						
-					</p>
+					</ul>
                 </div>
             </div>
         </div>
@@ -1465,7 +1466,7 @@
                 <div class="problem">
                     <div>Puri</div>
 					<br>
-					<p>
+					<ul>
 						Prof. Puspanjali
 						Mohapatra
 						
@@ -1476,7 +1477,7 @@
 						<br>
 						Ayusha Kar, Swoyam
 						Siddharth Nayak, Ishan Singh
-					</p>
+					</ul>
                 </div>
             </div>
         </div>
@@ -1486,7 +1487,7 @@
                 <div class="problem">
                     <div>Raygada</div>
 					<br>
-					<p>
+					<ul>
 						Prof. Subrat
 						Mohanty
 						
@@ -1497,7 +1498,7 @@
 						<br>
 						Ansh Chaturvedi , Trideeep Ku.
 						Tripathi, Yaswanth Ippili 
-					</p>
+					</ul>
                 </div>
             </div>
         </div>
@@ -1507,7 +1508,7 @@
                 <div class="problem">
                     <div>Sambalpur</div>
 					<br>
-					<p>
+					<ul>
 						Prof. Tapan Ku.
 						Sahoo
                         <br>
@@ -1517,7 +1518,7 @@
 						Suman Sourav
 						Biswal, Debi Prasad
 						Mohapatra, Harsh meena 			
-					</p>
+					</ul>
                 </div>
             </div>
         </div>
@@ -1527,7 +1528,7 @@
                 <div class="problem">
                     <div>Subarnapur</div>
 					<br>
-					<p>
+					<ul>
 						Prof. Alok
 						Ranjan Nayak						
                         <br>
@@ -1536,7 +1537,7 @@
 						<br>
 						Sudip Nayak, Madhav
 						Khandelwal, Mayank Gupta
-					</p>
+					</ul>
                 </div>
             </div>
         </div>
@@ -1546,7 +1547,7 @@
                 <div class="problem">
                     <div>Sundergarh</div>
 					<br>
-					<p>
+					<ul>
 						Prof.Sanjaya
 						Saxena
                         <br>
@@ -1554,7 +1555,7 @@
 						Rout						
 						<br>
 						Saurav Pati, Khitish Prasad, Madhsmita Deep 
-					</p>
+					</ul>
                 </div>
             </div>
         </div>
